--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -140,23 +140,25 @@
     font-size: 0.9rem;
     font-weight: 100;
     letter-spacing: 0.3rem;
-    padding-top: 2rem;
+    padding-top: 1rem;
     text-align: center;
     @include tablet {
       font-size: 1.2rem;
+      padding-top: 2rem;
     }
   }
 
   &__text {
     font-size: 0.9rem;
     font-weight: 200;
-    padding-top: 2rem;
+    padding-top: 1.5rem;
     text-align: center;
     line-height: 1.5rem;
     @include tablet {
       font-size: 1.2rem;
       width: 80%;
       line-height: 2rem;
+      padding-top: 2rem;
     }
 
     &--link {
